- Ability to import list of users to be archived
- Fixed rtf certificate exporting for IE8
- Added help links to modules towards the wiki page
- Moved uploaded projects from students to an internal folder named <project_id> inside projects folder and do not rename them
- Fixed issue about scheduled lessons in courses and go to Next lesson button
- Added balance payments through paypal
- Fixed SQL injection security vulnerability
- Fixed content traversing rules not working for individual users
- Fixed "not seen" rule not working when source unit is a test
- Fixed issue about date type custom user field in notifications
- Skill-gap test results are now available to students as well (Enterprise edition)
- Fixed issue about displaying custom profile fields in user reports generator
- Notifications can now be optionally sent as pms as well
- Fixed imported lessons not displaying skill names correctly (Educational edition)
- Fixed error in calculation for total_time in SCORM content when revisiting SCO
- Branch statistics now optionally display sub-branch information as well (Enterprise edition)
- Fixed issue about assigning administrator roles to lessons from professor's lesson administration page

=== Version 3.6.9 build 11018 ===
- Added course lessons schedule display in course info page
- Added copy blocks order from lesson X in module administrator_tools
- Added categories path for lessons in users reports in lesson tab
- Added custom user profile fields for user triggering the event notifications
- Removed unit options that where meaningless for SCORM, when editing such content
- Fixed deleting glossary entries deletes files instead
- Fixed username format in course/lesson info pages
- Fixed issue EF-567 about logging out using facebook connect
- Fixed EF-617 where glossary added an extra space in unit data

=== Version 3.6.9 build 10905 ===
- Fixed potential security issue while including javascript files
- Added comments field to user's profile page